@@ -5,11 +5,11 @@ export(bct,char2seed,chisq.detail,ci.examp,clipplot,clt.examp,cnvrt.coords,
        run.Pvalue.norm.sim,run.Pvalue.binom.sim,
        lattice.demo,limits.g,loess.demo,mle.demo,
        ms.arrows,ms.female,ms.filled.polygon,ms.male,ms.polygon,ms.polygram,
-       ms.sunflowers,ms.image,my.symbols,panel.dice,plot.dice,plot.rgl.coin,
-       plot.rgl.die,plot2script,plotFagan,plotFagan2,plotFagan.old,ms.face,
+       ms.sunflowers,ms.image,my.symbols,panel.dice,plot.dice,rgl.coin,
+       rgl.die,plot2script,plotFagan,plotFagan2,plotFagan.old,ms.face,
        plotFagan2.old,power.examp,updateusr,pairs2,
        prepanel.dice,put.points.demo,shadowtext,
-       rgl.Map,roc.demo,roll.rgl.die,rotate.cloud,
+       rgl.Map,roc.demo,roll.rgl.die,rotate.cloud,cor.rect.plot,
        rotate.persp,rotate.wireframe,run.ci.examp,run.cor.examp,
        run.cor2.examp,run.old.cor.examp,run.old.cor2.examp,
        run.hist.demo,run.power.examp,run.power.examp.old,sd.g,slider,
